see changelog for details - 0.2a checkin
git-svn-id: https://agilephp.svn.sourceforge.net/svnroot/agilephp/trunk@8 9bb1911b-6204-4126-9146-82cb5eeae392

--- a/test/remoting-example.html
+++ b/test/remoting-example.html
@@ -4,9 +4,9 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 		<title>AgilePHP JavaScript Remoting</title>
-		<script type="text/javascript" src="/AgilePHP/test/index.php/RemotingController/getBaseJS/true"></script>
-		<script type="text/javascript" src="/AgilePHP/test/index.php/RemotingController/load/RMITest"></script>
-		<script type="text/javascript" src="/AgilePHP/test/index.php/RemotingController/load/RMITest2/true"></script>
+		<script type="text/javascript" src="/test/index.php/IndexController/getBaseJS/true"></script>
+		<script type="text/javascript" src="/test/index.php/RemotingController/load/RMITest"></script>
+		<script type="text/javascript" src="/test/index.php/RemotingController/load/RMITest2/true"></script>
 		<script type="text/javascript">
 
 			/** XMLHttpRequest AJAX request with innerHTML update on completion */
@@ -132,7 +132,10 @@
 					<td><input id="submit" type="submit" name="Submit"></input></td>
 				</tr>
 			</table>
+			<!-- 
 			<input type="hidden" name="AGILEPHP_REQUEST_TOKEN" value="this_will_make_the_request_fail___remove me and watch it work!"/>
+			-->
+			<input type="hidden" name="AGILEPHP_REQUEST_TOKEN" value="1Iyk0nh13o82S10u6HffN"/>
 		</form>
 		<div id="formSubmitResponse"></div>
 	</body>
