--- a/test/remoting-example.html
+++ b/test/remoting-example.html
@@ -4,74 +4,86 @@
 	<head>
 		<title>AgilePHP JavaScript Remoting</title>
 		<script type="text/javascript" src="/test/index.php/RemotingController/getBaseJS/true"></script>
-		<script type="text/javascript" src="/test/index.php/RemotingController/index/RMITest"></script>
-		<script type="text/javascript" src="/test/index.php/RemotingController/index/RMITest2"></script>
+		<script type="text/javascript" src="/test/index.php/RemotingController/load/RMITest"></script>
+		<script type="text/javascript" src="/test/index.php/RemotingController/load/RMITest2"></script>
 		<script type="text/javascript">
 
 			/** XMLHttpRequest AJAX request with innerHTML update on completion */
 			function update() {
-	
-					 // Performs the AJAX request and then updates the <div id="content"></div> innerHTML with the responseText
-					 new AgilePHP.XHR().updater( AgilePHP.getRequestBase() + '/AJAXController/testUpdater', 'content' );
+
+				 // Performs the AJAX request and then updates the <div id="content"></div> innerHTML with the responseText
+				 new AgilePHP.XHR().updater(AgilePHP.getRequestBase() + '/AJAXController/testUpdater', 'content');
 			}
 
-			/** XMLHttpRequest AJAX form post */
-			function doFormSubmit( form ) {
+			/** Classic XMLHttpRequest AJAX form post */
+			function doFormSubmit(form) {
 
-				     var url = AgilePHP.getRequestBase() + '/AJAXController/formSubmit';
-				     new AgilePHP.XHR().formSubmit( url, form, function formSubmitCallback( response ) {
-				    		
-						 AgilePHP.debug( 'formSubmitCallback' );
-						 AgilePHP.debug( response );
-		
-						 document.getElementById( 'submit' ).disabled = false;
-						 document.getElementById( 'formSubmitResponse' ).innerHTML = response.result;
-					 });
-				     document.getElementById( 'submit' ).disabled = true;
+			     var url = AgilePHP.getRequestBase() + '/AJAXController/formSubmit';
+			     new AgilePHP.XHR().formSubmit(url, form, function formSubmitCallback(response) {
+
+					 AgilePHP.debug('formSubmitCallback');
+					 AgilePHP.debug(response);
+
+					 document.getElementById('submit').disabled = false;
+					 document.getElementById('formSubmitResponse').innerHTML = response.result;
+				 });
+			     document.getElementById('submit').disabled = true;
 			}
 
 			/** AgilePHP Remoting Using XMLHTTPRequest */
 			function doVariousRMITests() {
 
-				    AgilePHP.Remoting.setTransport( 'XHR' );
+				    // AgilePHP.Remoting.setTransport('XHR');
 
 					// Instantiate the remote PHP object and invoke a few #@RemoteMethod's
-					var rmi = new RMITest('test1', 'test2', 'test3');
-					    rmi.testme( 'arg1', 'arg2' );  // executed synchronous since no callback defined
+					var rmi = new RMITest('arg1', 'arg2', 'arg3');
 
-					// Setting a callback tells puts the remoting component in asynchronous mode.
-					rmi.setCallback( function mycallback( response ) {
+				    rmi.testme('arg1', 'arg2', function(response) {
+					    AgilePHP.debug('rmi.testme callback fired!');
+				    });
 
-						 // response has already eval'd
-						 AgilePHP.debug( response );
+					// Execute remote method with async callback defined
+					rmi.setTest2('1111', function(response) {
+						AgilePHP.debug('rmi.setTest2 callback fired!');
 					});
-					rmi.setTest2( '1111' );
-					rmi.testme2( 1, 2 ); // Access denied by #@Restrict( name = 'foo' )
+
+					// No callback but has exception handler defined so that when the
+					// #@Restrict(name = 'foo') throws an access denied exception, its caught
+					rmi.testme2(1, 2, function() {
+
+						AgilePHP.debug('rmi.testme2 callback fired!');
+					}, function(error) {
+
+						AgilePHP.debug('rmi.testme2 exception caught:');
+						if(console) console.dir(error);
+					});
 					rmi.show();
 					rmi.getTest2();
 
 					// RMITest2 is kept stateful within AgilePHP SessionScope
 					var rmi2 = new RMITest2();
-						rmi2.setCallback( function mySecondCallback( response ) {
 
-							 AgilePHP.debug( 'mySecondCallback' );
-							 AgilePHP.debug( response );
+					rmi2.testme('arg3', 'arg4', function(response) {
+						 AgilePHP.debug('rmi2.testme stateful async invocation callback fired');
 					});
-					rmi2.testme('arg3', 'arg4');
-					rmi2.testme2('arg3', 'arg4');
+					rmi2.testme2('arg3', 'arg4', function(response) {
+
+						 AgilePHP.debug('rmi2.testme2 stateful async invocation response:');
+						 AgilePHP.debug(response);
+					});
 			}
 
 			/** AgilePHP Remoting Using "HTML 5" WebSocket */
 			function doWebSocketTests() {
 
-				AgilePHP.Remoting.setTransport( 'WebSocket' );
+				AgilePHP.Remoting.setTransport('WebSocket');
 
-					var rmi2 = new RMITest2();
-						rmi2.setCallback( function mySecondCallback( response ) {
-
-							 AgilePHP.debug( response );
-					});
-					rmi2.testme( 'web', 'socket' );
+				var rmi2 = new RMITest2();
+				rmi2.testme('web', 'socket', function(response) {
+					 AgilePHP.debug(response);
+				}, function(error) {
+					AgilePHP.debug(error);
+				});
 			}
 		</script>
 	</head>
