- Checking in missing Interception class refactorings (from 0.39.0 and 0.39.1 builds)   o No longer breaks if missing closing php tag from document (?>)   o Parsing / creating interceptor proxy now includes fields in stub generation - Added escaping to JSON.stringify in AgilePHP.js Remoting.invoke - Created WinCacheProvider - Refactored Remoting marshall/unmarshall logic so that array elements of type object are not   "wrapped" inside a parent object that stores the class name. - Bug fix to DocBlockParser::getReturnType -- missing static modifier - Bug fix to DocBlockParser::getParameterType when parsing arrays - no longer returning <GenericType> with the array. - Created DocBlockParser::getArrayElementType to extract the data type from an array <GenericType> declaration. - Created DocBlockParser::getReturnArrayElementType to extract the data type from an array <GenericType> declaration. - Updated README required extensions info - Changed orm_pgsql_test.xml back to localhost address - Added $includeClassNames option to JsonRenderer::render. If true, a "_class" field will be generated in the JSON   object with the PHP class name as its value. - Refactored JsonToModel to transform JSON objects to native PHP objects based on the presence of a "_class" field. - Added DocBlockParser::getArrayElementType to extract array element data type from PHPdoc using Java Generics style   formatting -- array<MyType> - Added abstract DataModel class to allow easy rendering of models to any of the supported framework rendering formats. - Refactored ORM DomainModel to extend DataModel - Added BaseModel to mvc package to provide a basis for all models in the application - Updated AgilePHP::$classmap to include new mailer package, util package, and newly added framework classes - Added PHPdoc comments to User and Role models - Refactored Rest JSON-specific operations to include new type casting code
NOTE: This checkin breaks the studio package -- good excuse to get back to development on

--- a/test/remoting-example.html
+++ b/test/remoting-example.html
@@ -6,6 +6,7 @@
 		<script type="text/javascript" src="/test/index.php/RemotingController/getBaseJS/true"></script>
 		<script type="text/javascript" src="/test/index.php/RemotingController/load/RMITest"></script>
 		<script type="text/javascript" src="/test/index.php/RemotingController/load/RMITest2"></script>
+		<script type="text/javascript" src="/test/index.php/CarRemote"></script>
 		<script type="text/javascript">
 
 			/** XMLHttpRequest AJAX request with innerHTML update on completion */
@@ -18,7 +19,7 @@
 			/** Classic XMLHttpRequest AJAX form post */
 			function doFormSubmit(form) {
 
-			     var url = AgilePHP.getRequestBase() + '/AJAXController/formSubmit';
+				 var url = AgilePHP.getRequestBase() + '/AJAXController/formSubmit';
 			     new AgilePHP.XHR().formSubmit(url, form, function formSubmitCallback(response) {
 
 					 AgilePHP.debug('formSubmitCallback');
@@ -33,7 +34,7 @@
 			/** AgilePHP Remoting Using XMLHTTPRequest */
 			function doVariousRMITests() {
 
-				    // AgilePHP.Remoting.setTransport('XHR');
+				    AgilePHP.Remoting.setTransport('XHR');
 
 					// Instantiate the remote PHP object and invoke a few #@RemoteMethod's
 					var rmi = new RMITest('arg1', 'arg2', 'arg3');
@@ -88,9 +89,14 @@
 		</script>
 	</head>
 	<body>
+		
+		<h2>Classic AJAX examples</h2>
+
+		<h4>Automatic innerHTML update</h4>
 		<input type="button" value="Test AgilePHP.XHR().updater" onclick="update()"/>
 		<div id="content"></div>
 
+		<h4>AJAX Form Submission</h4>
 		<form name="frmTestAjaxForm" onSubmit="doFormSubmit( this ); return false;">
 			<table border="0">
 				<tr>
@@ -143,10 +149,15 @@
 			<input type="hidden" name="AGILEPHP_REQUEST_TOKEN" value="this_will_make_the_request_fail___remove me and watch it work!"/>
 			-->
 		</form>
+		<h2>AgilePHP Remoting Examples</h2>
+
+		<h4>XMLHttpRequest Transport</h4>
 		<div id="formSubmitResponse"></div>
 		<div id="variousTests" style="padding-top: 25px;">
 			<input type="button" onclick="javascript:doVariousRMITests()" value="Various Other RMI Tests"/> (watch JavaScript debugger)
 		</div>
+
+		<h4>WebSocket Transport</h4>
 		<div id="websocketTests" style="padding-top: 25px;">
 			<input type="button" onclick="javascript:doWebSocketTests()" value="WebSocket Transport RMI Tests"/> (watch JavaScript debugger)
 		</div>
